--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
